# insurance-audit-tool

./: .gitignore  README.md  docker-compose.yml  eval_report.md
Guide/: test_cases.json
backend/: nixpacks.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a05ce7ebcfa2_initial_tables.py
backend/app/: main.py
backend/app/agents/: classifier_agent.py  consistency_agent.py  decision_engine.py  extraction_agent.py  llm_decision_engine.py  verification_agent.py
backend/app/api/: claims.py  health.py  websocket.py
backend/app/core/: celery_app.py  config.py  storage.py
backend/app/db/: models.py  session.py
backend/app/models/: decision.py  domain.py  extraction_schemas.py
backend/app/policy/: loader.py
backend/app/policy/rules/: copay.py  exclusions.py  fraud_signals.py  limits.py  network_discount.py  pre_auth.py  waiting_periods.py
backend/app/providers/: base.py  gemini_provider.py  groq_provider.py  ocr.py  openrouter_provider.py  router.py  stub_provider.py
backend/app/tasks/: pipeline.py
backend/app/tracing/: component_runner.py  langfuse_client.py  trace_builder.py
backend/scripts/: run_eval.py  test_s3_conn.py
backend/tests/: conftest.py
backend/tests/unit/: test_decision_engine.py  test_verification_agent.py  test_waiting_periods.py
frontend/: index.html
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/src/components/: ClaimSubmitModal.jsx  Dashboard.jsx  Icons.jsx  LiveAudit.jsx
