[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plum-claims-backend"
version = "0.1.0"
description = "Plum Health Insurance Claims Processing Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",

    # Async database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis + Celery
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.2.0",

    # Pydantic + config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # LLM providers
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "openai>=1.0.0",

    # Object storage (MinIO/S3)
    "boto3>=1.35.0",

    # Observability
    "langfuse>=2.57.0",

    # Fuzzy string matching (for consistency agent)
    "rapidfuzz>=3.10.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
